# nanograd

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  PLAN.md  README.md  REVIEW_AND_FIX_REPORT.md  pyproject.toml
benchmarks/: throughput.py
examples/: char_lm.py  cifar_cnn.py  cifar_resnet.py  dqn_gridworld.py  mnist_autoencoder.py  mnist_cnn.py  mnist_gan.py  mnist_mlp.py  mnist_unet.py  mnist_vae.py  mnist_vit.py  reinforce_gridworld.py  seq2seq_copy.py  transformer_lm.py  transformer_translator.py  xor.py
nanograd/: __init__.py  function.py  ops.py  ops_extra.py  tensor.py  training.py
nanograd/data/: __init__.py  cifar.py  dataloader.py  dataset.py  mnist.py  transforms.py
nanograd/jit/: __init__.py  fuser.py
nanograd/models/: __init__.py  resnet.py  unet.py  vit.py
nanograd/nn/: __init__.py  attention.py  conv.py  embedding.py  functional.py  init.py  layers.py  losses_extra.py  module.py  rnn.py
nanograd/optim/: __init__.py  grad_clip.py  lr_scheduler.py  optimizer.py
nanograd/utils/: __init__.py  checkpoint.py  gradcheck.py  (+2 more)
tests/: test_autograd.py  test_bugfixes.py  test_convtranspose.py  test_cross_attention.py  test_data.py  test_dqn.py  test_ema.py  test_extras.py  test_integration.py  test_jit.py  test_losses_extra.py  test_models.py  test_nn_conv.py  test_nn_functional.py  test_nn_layers.py  test_nn_rnn.py  test_ops.py  test_ops_extra.py  test_optim.py  test_r2_activations_norms.py  test_r3_extras.py  test_r5_ops.py  test_r6_losses.py  test_r7_ops.py  test_trainer.py  test_training.py  test_transforms.py  test_unet.py  test_utils.py  test_vit.py
